--- a/style.css
+++ b/style.css
@@ -456,8 +456,54 @@ h1 {
     bottom: 264.91px;
     
 }
-
-
+.video_keybord {
+    background-color: #000000;
+    width: 1440px;
+    height: 85px;
+    position: relative;
+}
+.little_play{
+    background-image: url(assets/img/little_play.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 23px;
+    height: 31px;
+    position: absolute;
+    left: 30px;
+    top: 27px;
+    }
+.red_line {
+    background-image: url(assets/img/red_line.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 929px;
+    height: 15px;
+    position: absolute;
+    left: 103px;
+    top: 35px;
+}
+.poin_line {
+    background-image: url(assets/img/point.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: 594px;
+    top: 35px;
+    z-index: 1;
+}
+.white_play {
+    background-image: url(assets/img/white_line.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 432px;
+    height: 8px;
+    position: absolute;
+    right: 408px;
+    top: 35px;
+    
+}
 
 
 
