--- a/style.css
+++ b/style.css
@@ -627,6 +627,7 @@ video {
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+    padding-bottom: 75px;
     
 
 }
@@ -671,13 +672,130 @@ video {
     transform: rotate(360deg);
  
 }
-/* Start section Art gallery*/
-/*.art_gallery {
+/*Start section Art gallery*/
+
+.art_gallery {
     width: 1920px;
     height: 2200px;
     background-color: #030303;
+    padding-top: 75px;
+    position: relative;
 }
 .gallery_title {
     color: #FFFFFF;
+    font-family: "Forum";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 80px;
+    line-height: 90px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
     padding-bottom: 75px;
 }
+.gallery_wrapper {
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    align-items: normal;
+}
+.gallery_image1 {
+    background-image: url(assets/img/galery\ 1.png);
+    width: 456px;
+    background-repeat: no-repeat;
+    height: 570px;
+    margin-bottom: 24px;
+}
+.gallery_image2 {
+    background-image: url(assets/img/galery\ 2.png);
+    width: 456px;
+    height: 570px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image3 {
+    background-image: url(assets/img/galery\ 3.png);
+    width: 456px;
+    height: 456px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image4 {
+    background-image: url(assets/img/galery\ 4.png);
+    width: 456px;
+    height: 242px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image5 {
+    background-image: url(assets/img/galery\ 5.png);
+    width: 456px;
+    height: 456px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image6 {
+    background-image: url(assets/img/galery\ 6.png);
+    width: 456px;
+    height: 570px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+    
+}
+.gallery_image7 {
+    background-image: url(assets/img/galery\ 7.png);
+    width: 456px;
+    height: 570px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image8 {
+    background-image: url(assets/img/galery\ 8.png);
+    width: 456px;
+    height: 292px;
+    background-repeat: no-repeat;
+    margin-bottom: 68px;
+}
+.gallery_image9 {
+    background-image: url(assets/img/galery\ 9.png);
+    width: 456px;
+    height: 570px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image10 {
+    background-image: url(assets/img/galery\ 10.png);
+    width: 456px;
+    height: 456px;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+}
+.gallery_image11 {
+    background-image: url(assets/img/galery\ 11.png);
+    width: 456px;
+    height: 456px;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+.gallery_image12 {
+    background-image: url(assets/img/galery\ 12.png);
+    width: 456px;
+    height: 342px;
+    background-repeat: no-repeat;
+}
+.wrapper_group_1 {
+    margin-top: 50px;
+}
+.wrapper_group_3 {
+    margin-top: 50px;
+}
+.gradient {
+    background-image: url(assets/img/gradient.png);
+    background-repeat: no-repeat;
+    width: 1440px;
+    height: 360px;
+    position: absolute;
+    bottom: 0px;
+}
+/* .gallery_image4, .gallery_image8, .gallery_image12 {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%); */
+/* } */
